# ForgeMCP

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.agents/: PRD.md  forge_orchestrator.agent
.agents/commands/: commit.md  create-prd.md
.agents/plans/: core-foundation.md  semantic-memory.md  skills-engine.md
.agents/reference/: mcp-protocol-reference.md  postgres-pgvector-best-practices.md  rust-tokio-best-practices.md  testing-and-logging.md
config/: agents.json
migrations/: 0001_memory_chunks.sql
scripts/: llama-agent.sh
skills/: create-skill.md  test_skill.md
src/: db.rs  embeddings.rs  main.rs  skills_engine.rs
