[package]
name = "forge-mcp"
version = "0.1.0"
edition = "2021"
authors = ["J Code <jcodesigma@gmail.com>"]
license = "MIT"
description = "A high-performance, Rust-native MCP server for Google Antigravity"

[dependencies]
# Async Runtime
tokio = { version = "1.37.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Future MCP SDK / Base JSON-RPC
tower = "0.4.13"

# Database 
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
pgvector = { version = "0.3.3", features = ["postgres", "sqlx"] }
walkdir = "2.4"

# Embeddings 
fastembed = "5.13.2"
tracing = "0.1"
tracing-subscriber = "0.3"
